[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Maksat Hemdemow <thehighestintheroom00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
flask = "^3.0.0"
requests = "^2.31.0"
sentry-sdk = {extras = ["flask"], version = "^1.39.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
